2007-03-09 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-web.mk, lib/bootstrap.mk, lib/doc-archive.mk,
	  lib/src-archive.mk, local/cf-x86.mk, sdcc-build-bootstrap.sh:
	  invoke do-upload only once at the end of all builds;
	  do not configure and run the doc Makefile as a part of cf-x86 build
	  since the documentation is built in a separate step

2007-03-08 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86-i386-unknown-linux2.5.mk: added
	* local/cf-x86.mk: added i386-unknown-linux2.5 build to OTHERTARGETS

2007-03-06 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86-i586-mingw32msvc.mk: the latest version of mingw gcc is
	  installed in $(HOME)/local-$(HOSTNAME); added MAKEJOBFLAGS = -j 2
	* local/cf-x86.mk: cf-x86 is an amd64-unknown-linux2.4 machine

2007-01-25 Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk,
	* lib/variables.mk,
	* sdcc-build-bootstrap.sh: put local tools in ~/local-$HOSTNAME
	* sdcc-build-bootstrap.sh: use "svn checkout" instead "svn export"
	because there's enough space and it makes administration easier,
	simplify co of sdcc-build

2007-01-24 Bernhard Held <bernhard AT bernhardheld.de>

	* lib/variables.mk: changed SVNSERVER to localhost, maybe it should
	be removed
	* lib/fetch.mk: changed SVN-URL from svn.sourceforge.net to
	sdcc.svn.sourceforge.net, because it worked better during the broken
	DNS setup; now both work, but the latter one is the official one
	* sdcc-build-bootstrap.sh: changed SVN-URL,
	export sdcc-build directly from svn,
	moved BUILDROOT from /var/tmp back to ~/build
	* local/cf-x86.mk,
	* local/cf-x86-i586-mingw32msvc.mk: added Erik's host

2007-01-24 Bernhard Held <bernhard AT bernhardheld.de>

	* /sdcc/tags/sdcc-build_before_move_to_ECF: added tag, the nightly
	build now moves from sourceforges compile farm to Erik's compile farm.

2007-01-19 Bernhard Held <bernhard AT bernhardheld.de>

	* local/x86-linux2-i586-mingw32msvc.mk: replaced --datadir by